# samoswallow

./: .gitignore  CONCEPT.md  Cargo.toml  README.md  swallow.example.yaml
crates/swallowd/: Cargo.toml
crates/swallowd/migrations/: 0001_init.sql  0002_metrics.sql  0003_external_port.sql  0004_data_mount.sql
crates/swallowd/src/: api.rs  auth.rs  caddy.rs  config.rs  db.rs  deploy.rs  docker.rs  error.rs  hooks.rs  main.rs  manifest.rs  metrics.rs  models.rs  web.rs
example/: Dockerfile  README.md  app.py  swallow.yaml
packaging/: swallow-caddy.service  swallowd.service
scripts/: dev-start.sh  dev-stop.sh  install.sh  uninstall.sh
