[package]
name = "swallowd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "samoswallow daemon: control plane, builder, docker & caddy integration"

[[bin]]
name = "swallowd"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
